--- a/src/components/styles/singleItem.css
+++ b/src/components/styles/singleItem.css
@@ -1,6 +1,9 @@
-.singleFood{
-    display: flex;
-    justify-content: center;
+.singleItem{
+    color:"white";
+    display:"flex";
+    flex-direction:"column";
+    justify-content:"center";
+    align-items:"center";
 }
 
 .imageSingleContainer{
