--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -18,6 +18,7 @@ body{
 
 .backGroundImage{
     background-image: url("http://source.unsplash.com/IoQioGLrz3Y");
+    background-size: cover;
 }
 
 .homeBox{
