--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 body{
   background-size: 100% 100%;
-  background-image: url('../public/world_hexes.jpg');
+  background-image: url('../public/assets/pexels-nataliya-vaitkevich-7235902.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
