--- a/src/components/styles/Card.css
+++ b/src/components/styles/Card.css
@@ -77,10 +77,11 @@
 }
 
 .favCard{
+    min-width: 200px;
     color: black;
     padding: 10px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     height: 75px;
     background-color: #fff;
