--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -2,24 +2,6 @@
     margin: 0;
     padding: 0;
 }
-  
-body{
-    display: flex;
-    width: 100vw;
-    height: 100vh;
-    align-items: center;
-    flex-direction: column;
-    background-color: rgb(34, 33, 33);
-    /* background-image: url("http://source.unsplash.com/IoQioGLrz3Y"); */
-    background-repeat: no-repeat;
-    background-size: 100%;
-    position: absolute;
-}
-
-.backGroundImage{
-    background-image: url("http://source.unsplash.com/IoQioGLrz3Y");
-    background-size: cover;
-}
 
 .homeBox{
     height: 90vh;
@@ -31,6 +13,8 @@ body{
 
 .refs{
     width: 100vw;
+    border-radius: 5px;
+    padding-left: 40px
 }
 
 .title{
