--- a/client/src/components/styles/world.css
+++ b/client/src/components/styles/world.css
@@ -15,7 +15,7 @@
   opacity: 1;
   transition: opacity 0.5s;
 
-  z-index: -1;
+  z-index: 1;
   margin-top: -90px;
   background-color: #000000;
 }
@@ -27,9 +27,9 @@
   margin-left: 1rem;
 }
 .ag-canvas_svg path {
-  fill: #f9f9f9;
+  fill: #3c3c46;
   fill-opacity: 1;
-  stroke: #000000;
+  stroke: #fffefe;
   stroke-opacity: 1.5;
   stroke-width: 1;
   transition: 0.5s;
