--- a/client/src/components/styles/world.css
+++ b/client/src/components/styles/world.css
@@ -17,7 +17,7 @@
 
   z-index: 1;
   margin-top: -90px;
-  background-color: #000000;
+  background-color: #00000000;
 }
 .ag-canvas_svg {
   display: block;
