--- a/client/src/components/styles/world.css
+++ b/client/src/components/styles/world.css
@@ -12,6 +12,8 @@
 
   width: 100vw;
   height: 100%;
+  min-height: min-content;
+  
   padding: 3rem 1rem;
   opacity: 1;
   transition: opacity 0.5s;
